force-app/main/default/objects/Statistics__c/Statistics__c.object-meta.xml
<CustomObject>
    <label>Statistics</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>