force-app/main/default/objects/Statistics__c/fields/Closing_Process_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Process_Start_Date__c</fullName>
    <formula>Trust__r.Closing_Process_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Process Start Date</label>
    <type>Date</type>
</CustomField>