force-app/main/default/objects/Statistics__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>Periods__c</referenceTo>
    <relationshipLabel>Statistics</relationshipLabel>
    <relationshipName>Statistics</relationshipName>
    <type>Lookup</type>
</CustomField>