force-app/main/default/objects/Statistics__c/fields/Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_End_Date__c</fullName>
    <formula>Period__r.Period_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period End Date</label>
    <type>Date</type>
</CustomField>