force-app/main/default/objects/Statistics__c/fields/Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Start_Date__c</fullName>
    <formula>Period__r.Period_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>