force-app/main/default/objects/Statistics__c/fields/Trust_Initial_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>Trust_Initial_Funding_Date__c</fullName>
    <formula>Trust__r.Initial_Funding_Date_Rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Initial Funding Date</label>
    <type>Date</type>
</CustomField>