force-app/main/default/objects/Statistics__c/fields/Trust_Statistic_Type__c.field-meta.xml
<CustomField>
    <fullName>Trust_Statistic_Type__c</fullName>
    <label>Trust Statistic Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activated This Month</fullName>
            </value>
            <value>
                <fullName>Already Active</fullName>
            </value>
            <value>
                <fullName>Closing Started</fullName>
            </value>
            <value>
                <fullName>Closing Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>