force-app/main/default/objects/Statistics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Trust_Statistic_Type__c</columns>
    <columns>Period__c</columns>
    <columns>Trust__c</columns>
    <columns>Trust_Initial_Funding_Date__c</columns>
    <columns>Closing_Process_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>